tdf#118593 sfx2: no need to call into xmlsecurity without signature streams

In the ODF and OOXML cases the ZIP storage already tells us if there are
signatures on this file so we can avoid the whole libxmlsec init, which
can be slow.

The bugreport talks about a smartcard setup, I also heard that the gpg
code in xmlsecurity isn't cheap to init, either.

(cherry picked from commit 7ac4e48687d7679927f5659e941024445946ffa7)

Change-Id: Ife9ed577d03e96a9ac2f42a28776b7df58e76c59